@@ -1,6 +1,8 @@
 
 * 3.0.15 *
 
+* Way better schema support! Thanks to @ianic! Fixes #61
+
 * Warn of possible permission problems if "EXEC sp_helptext..." does not work view. Fixes #73.
 
 
